# Assignment2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testCasesUserInput
.github/workflows/: build.yml
src/: fraction.h  gaussianElim.h  interior_point.h  matrix.h  matrix_ops.h  simplex.h  usefulEnums.h  vector_ops.h
tests/: augmentedMatrixTest.cpp  identityMatrixTest.cpp  interiorPointTest.cpp  inverseMatrixTest.cpp  matrixDetTest.cpp  matrixTransposeTest.cpp  simplexTest.cpp  solveLinearEqTest.cpp
